# weather_symbol

./: .gitignore  Makefile.am  README  README.md  configure.ac  debian.mk  gtest.mk  libweather-symbol.pc.in  libweather_symbol.pc.in
debian/: control  copyright  rules
debian_files/: changelog  control  copyright  libweather-symbol-dev.install  rules
docker/: Dockerfile  start_weather_symbol_bionic_builder.sh  weather_symbol_bionic_builder_shell.sh
m4/: googletest.m4
src/: Code.h  Factory.cpp  Factory.h  Interpretor.cpp  Interpretor.h  WeatherData.cpp  WeatherData.h  WeatherSymbol.cpp  WeatherSymbol.h  WeatherSymbolBits.cpp  WeatherSymbolBits.h  WeatherSymbolCode.cpp  WeatherSymbolCode.h  make.mk
test/: SimpleWeatherSymbolTest.cpp  classificationTest.cpp  make.mk
